# call-coach

./: .codecov.yml  .dockerignore  .env.example  .env.production.example  .gitignore  .handoff.md  .mcp.json  .pre-commit-config.yaml  .session_coordination.md  .vercelignore  ACCESSIBILITY_AUDIT.md  API_OPTIMIZATION_SUMMARY.md  BATCH_2_API_OPTIMIZATION_COMPLETE.md  BATCH_2_KB_MANAGEMENT_COMPLETE.md  CACHING_IMPLEMENTATION_COMPLETE.md  CACHING_PERFORMANCE_IMPLEMENTATION.md  CALL_PLAYER_IMPLEMENTATION_SUMMARY.md  CICD_COMPLETION_REPORT.md  CI_CD_DELIVERY_SUMMARY.txt  CLAUDE.md  DATABASE_POOLING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIXES_NEEDED.md  DOCS_INGESTION_COMPLETION.md  DOCUMENTATION_INGESTION_GUIDE.md  Dockerfile.api  Dockerfile.dlt  Dockerfile.frontend  Dockerfile.mcp  Dockerfile.webhook  FINAL_DELIVERY_REPORT.md  FRONTEND_INTEGRATION.md  HORIZON_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  KNOWLEDGE_BASE_IMPLEMENTATION.md  MONITORING_SETUP_COMPLETE.md  Makefile  NOTIFICATIONS_IMPLEMENTATION.md  OPPORTUNITY_COACHING_STATUS.md  (+55 more)
.beads/: issues.jsonl
.dlt/: state.json
.fastmcp/: DEPLOYMENT_CHECKLIST.md  config.json  deploy.sh
.github/: CICD_QUICK_START.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CODEOWNERS  README.md  SETUP_CHECKLIST.md  WORKFLOW_DIAGRAM.md
.openspec/: GONG_CLIENT_AUDIT.md  SCHEMA_CHANGES_NEEDED.md  gong-api-v2-openapi.json
analysis/: __init__.py  ab_testing.py  action_filter.py  cache.py  chunking.py  engine.py  learning_insights.py  moment_extractor.py  opportunity_coaching.py  rubric_loader.py  thematic_grouper.py
api/: __init__.py  error_handlers.py  monitoring.py  rest_server.py
benchmarks/: __init__.py  api_benchmarks.py  cache_benchmarks.py  db_benchmarks.py  report.py
cache/: QUICK_START.md  README.md  __init__.py  prompt_cache.py  redis_client.py  warming.py
coaching_mcp/: server.py
db/: __init__.py  connection.py  models.py  pagination.py  queries.notifications.py  queries.py  sample_data.sql
deployments/: weekly_review.yaml
dlt_pipeline/: __init__.py  bigquery_to_postgres.py  config.toml  error_handling.py  monitoring.py  test_calls_source.py  test_emails_source.py  test_monitoring.py  test_opportunities_source.py
docs/: BRANCH_PROTECTION.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CI_CD_INTEGRATION.md  CI_CD_QUICK_REFERENCE.md  DOCUMENTATION_INDEX.md  RBAC_API.md  RBAC_TESTING.md  README.md  TESTING_ROLE_AWARE_TOOLS.md  TYPE_GENERATION.md  code-review.md  deployment.md  middleware-refactor-summary.md  testing-guide.md
e2e/: conftest.py  test_authentication.py  test_call_viewer.py  test_coaching.py
flows/: README_NOTIFICATIONS.md  README_WEEKLY_REVIEW.md  __init__.py  daily_gong_sync.py  dlt_sync_flow.py  notifications.py  process_new_call.py  sync_bigquery_data.py  update_knowledge.py  weekly_review.py
frontend/: .env.example  .gitignore  API_TESTING.md  AUTH_IMPLEMENTATION_SUMMARY.md  BACKEND_INTEGRATION_COMPLETE.md  CALL_PLAYER_ENHANCEMENTS.md  CALL_VIEWER_COMPLETE.md  CLERK_SETUP.md  DASHBOARD_COMPLETE.md  DESIGN_SYSTEM.md  DESIGN_SYSTEM_HANDOFF.md  FEED_IMPLEMENTATION.md  MANUAL_UI_TEST_RESULTS.md  NAVIGATION.md  PERFORMANCE.md  PERFORMANCE_CHANGES.md  QUICK_START_AUTH.md  RBAC_TESTING.md  README.md  ROLE_UI_IMPLEMENTATION_NOTES.md  SEARCH_IMPLEMENTATION.md  SECTION_12_COMPLETE.md  SETTINGS_QUICK_START.md  SPEC-UI-IMPROVEMENTS.md  SWR_IMPLEMENTATION.md  TESTING.md  TEST_SUMMARY.md  VERCEL_DEPLOYMENT_SUMMARY.md  jest.config.js  jest.setup.js  load-test.k6.js  (+7 more)
(+667 files in other folders)
